Test overflow fix

--- a/css/global.css
+++ b/css/global.css
@@ -1,58 +1,49 @@
 @font-face {
-  font-family: 'aMedium';
-  src: url('../fonts/Antarctica-Medium.woff2') format('woff2');
+  font-family: "aMedium";
+  src: url("../fonts/Antarctica-Medium.woff2") format("woff2");
 }
 
-@font-face{
-  font-family: 'aRegular';
-  src: url('../fonts/Antarctica-Regular.woff2') format('woff2');
+@font-face {
+  font-family: "aRegular";
+  src: url("../fonts/Antarctica-Regular.woff2") format("woff2");
 }
 
-@font-face{
-  font-family: 'aLight';
-  src: url('../fonts/Antarctica-Light.woff2') format('woff2');
+@font-face {
+  font-family: "aLight";
+  src: url("../fonts/Antarctica-Light.woff2") format("woff2");
 }
 
-@font-face{
-  font-family: 'aBold';
-  src: url('../fonts/Antarctica-Bold.woff2') format('woff2');
+@font-face {
+  font-family: "aBold";
+  src: url("../fonts/Antarctica-Bold.woff2") format("woff2");
 }
 
-@font-face{
-  font-family: 'aThin';
-  src: url('../fonts/Antarctica-Thin.woff2') format('woff2');
-}
-
-body{
-  font-family: Aregular;
-  line-height: 1.1;
-  overflow-x: hidden;
+@font-face {
+  font-family: "aThin";
+  src: url("../fonts/Antarctica-Thin.woff2") format("woff2");
 }
 
 :root {
-    --vert: #02F58F;
-    --gris: #EFEFEF;
-    --noir: #1B1B1B;
-    --blanc: #FFFFFF;
-    --rose: #E77474;
-    
-    --shadow-color: 155deg 100% 28%;
-    --shadow-elevation-low:
-      0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.1),
-      0.4px 0.8px 1px -1.2px hsl(var(--shadow-color) / 0.1),
-      1px 2px 2.5px -2.5px hsl(var(--shadow-color) / 0.1);
-    --shadow-elevation-medium:
-      0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.11),
-      0.8px 1.6px 2px -0.8px hsl(var(--shadow-color) / 0.11),
-      2.1px 4.1px 5.2px -1.7px hsl(var(--shadow-color) / 0.11),
-      5px 10px 12.6px -2.5px hsl(var(--shadow-color) / 0.11);
-    --shadow-elevation-high:
-      0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.1),
-      1.5px 2.9px 3.7px -0.4px hsl(var(--shadow-color) / 0.1),
-      2.7px 5.4px 6.8px -0.7px hsl(var(--shadow-color) / 0.1),
-      4.5px 8.9px 11.2px -1.1px hsl(var(--shadow-color) / 0.1),
-      7.1px 14.3px 18px -1.4px hsl(var(--shadow-color) / 0.1),
-      11.2px 22.3px 28.1px -1.8px hsl(var(--shadow-color) / 0.1),
-      17px 33.9px 42.7px -2.1px hsl(var(--shadow-color) / 0.1),
-      25px 50px 62.9px -2.5px hsl(var(--shadow-color) / 0.1);
+  --vert: #02f58f;
+  --gris: #efefef;
+  --noir: #1b1b1b;
+  --blanc: #ffffff;
+  --rose: #e77474;
+
+  --shadow-color: 155deg 100% 28%;
+  --shadow-elevation-low: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.1),
+    0.4px 0.8px 1px -1.2px hsl(var(--shadow-color) / 0.1),
+    1px 2px 2.5px -2.5px hsl(var(--shadow-color) / 0.1);
+  --shadow-elevation-medium: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.11),
+    0.8px 1.6px 2px -0.8px hsl(var(--shadow-color) / 0.11),
+    2.1px 4.1px 5.2px -1.7px hsl(var(--shadow-color) / 0.11),
+    5px 10px 12.6px -2.5px hsl(var(--shadow-color) / 0.11);
+  --shadow-elevation-high: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.1),
+    1.5px 2.9px 3.7px -0.4px hsl(var(--shadow-color) / 0.1),
+    2.7px 5.4px 6.8px -0.7px hsl(var(--shadow-color) / 0.1),
+    4.5px 8.9px 11.2px -1.1px hsl(var(--shadow-color) / 0.1),
+    7.1px 14.3px 18px -1.4px hsl(var(--shadow-color) / 0.1),
+    11.2px 22.3px 28.1px -1.8px hsl(var(--shadow-color) / 0.1),
+    17px 33.9px 42.7px -2.1px hsl(var(--shadow-color) / 0.1),
+    25px 50px 62.9px -2.5px hsl(var(--shadow-color) / 0.1);
 }
